# aion-bevy

./: Cargo.toml  README.md
src/: archetypes.rs  audio.rs  avatars.rs  components.rs  controls.rs  effects.rs  events.rs  fps.rs  game.rs  main.rs  physics.rs  play.rs  systems.rs  utils.rs
