[package]
name = "aion-bevy"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bevy = { version = "0.13.2", features = ["wav", "dynamic_linking"] }
bevy_rapier2d = { version = "0.25.0", features = ["debug-render-2d", "simd-stable", "parallel", "serde-serialize"] }
# also rapier2d features: "enhanced-determinism", "wasm-bindgen"
bevy_vector_shapes = "0.7.0"
lazy_static = "1.4.0"
rand = "0.8.5"

[profile.dev]
opt-level = 1

[profile.dev.package."*"]
opt-level = 3
